Dev- completed user registration
